* ThymeLeaf controller 추가 및 서버포트 변경

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,8 @@
 
 <body>
 
-<p th:text="${welcome}">Welcome ThymeLeaf</p>
+<h1 th:text="${welcome}">Welcome ThymeLeaf</h1>
+<h1 th:text="${port}">Welcome ThymeLeaf</h1>
 
 </body>
 
